Add KOL settings